--- a/examples/frdmk64f_lin_test/.cproject
+++ b/examples/frdmk64f_lin_test/.cproject
@@ -233,7 +233,7 @@
 								<option id="com.crt.advproject.link.gcc.lto.optmization.level.1681801559" name="Link-time optimization level" superClass="com.crt.advproject.link.gcc.lto.optmization.level" useByScannerDiscovery="false"/>
 								<option id="com.crt.advproject.link.fpu.1857750309" name="Floating point" superClass="com.crt.advproject.link.fpu" useByScannerDiscovery="false" value="com.crt.advproject.link.fpu.fpv4.hard" valueType="enumerated"/>
 								<option id="com.crt.advproject.link.manage.374089573" name="Manage linker script" superClass="com.crt.advproject.link.manage" useByScannerDiscovery="false" value="true" valueType="boolean"/>
-								<option id="com.crt.advproject.link.script.1139431320" name="Linker script" superClass="com.crt.advproject.link.script" useByScannerDiscovery="false" value="xfrdmk64f_freertos_uart_example_Debug.ld" valueType="string"/>
+								<option id="com.crt.advproject.link.script.1139431320" name="Linker script" superClass="com.crt.advproject.link.script" useByScannerDiscovery="false" value="frdmk64f_lin_test_Debug.ld" valueType="string"/>
 								<option id="com.crt.advproject.link.scriptdir.335086985" name="Script path" superClass="com.crt.advproject.link.scriptdir" useByScannerDiscovery="false"/>
 								<option id="com.crt.advproject.link.crpenable.524406064" name="Enable automatic placement of Code Read Protection field in image" superClass="com.crt.advproject.link.crpenable" useByScannerDiscovery="false"/>
 								<option id="com.crt.advproject.link.flashconfigenable.1442425059" name="Enable automatic placement of Flash Configuration field in image" superClass="com.crt.advproject.link.flashconfigenable" useByScannerDiscovery="false" value="true" valueType="boolean"/>
@@ -254,7 +254,17 @@
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
 								</inputType>
 							</tool>
-							<tool id="com.crt.advproject.tool.debug.debug.1535757997" name="MCU Debugger" superClass="com.crt.advproject.tool.debug.debug"/>
+							<tool id="com.crt.advproject.tool.debug.debug.55220320" name="MCU Debugger" superClass="com.crt.advproject.tool.debug.debug"/>
+						</toolChain>
+					</folderInfo>
+					<folderInfo id="com.crt.advproject.config.exe.debug.1638122860.945433268" name="/" resourcePath="source">
+						<toolChain id="com.crt.advproject.toolchain.exe.debug.1495752523" name="NXP MCU Tools" superClass="com.crt.advproject.toolchain.exe.debug" unusedChildren="">
+							<tool id="com.crt.advproject.cpp.exe.debug.431948699" name="MCU C++ Compiler" superClass="com.crt.advproject.cpp.exe.debug.1993985118"/>
+							<tool id="com.crt.advproject.gcc.exe.debug.1519929762" name="MCU C Compiler" superClass="com.crt.advproject.gcc.exe.debug.983020627"/>
+							<tool id="com.crt.advproject.gas.exe.debug.1180373552" name="MCU Assembler" superClass="com.crt.advproject.gas.exe.debug.266712343"/>
+							<tool id="com.crt.advproject.link.cpp.exe.debug.1018072824" name="MCU C++ Linker" superClass="com.crt.advproject.link.cpp.exe.debug.373700528"/>
+							<tool id="com.crt.advproject.link.exe.debug.304767195" name="MCU Linker" superClass="com.crt.advproject.link.exe.debug.1927217567"/>
+							<tool id="com.crt.advproject.tool.debug.debug.834832853" name="MCU Debugger" superClass="com.crt.advproject.tool.debug.debug.55220320"/>
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
@@ -497,7 +507,7 @@
 								<option id="com.crt.advproject.link.gcc.lto.optmization.level.897298005" name="Link-time optimization level" superClass="com.crt.advproject.link.gcc.lto.optmization.level"/>
 								<option id="com.crt.advproject.link.fpu.1633050259" name="Floating point" superClass="com.crt.advproject.link.fpu" value="com.crt.advproject.link.fpu.fpv4.hard" valueType="enumerated"/>
 								<option id="com.crt.advproject.link.manage.86642598" name="Manage linker script" superClass="com.crt.advproject.link.manage" value="true" valueType="boolean"/>
-								<option id="com.crt.advproject.link.script.1872259116" name="Linker script" superClass="com.crt.advproject.link.script" value="xfrdmk64f_freertos_uart_example_Release.ld" valueType="string"/>
+								<option id="com.crt.advproject.link.script.1872259116" name="Linker script" superClass="com.crt.advproject.link.script" value="frdmk64f_lin_test_Release.ld" valueType="string"/>
 								<option id="com.crt.advproject.link.scriptdir.817658941" name="Script path" superClass="com.crt.advproject.link.scriptdir"/>
 								<option id="com.crt.advproject.link.crpenable.947987536" name="Enable automatic placement of Code Read Protection field in image" superClass="com.crt.advproject.link.crpenable"/>
 								<option id="com.crt.advproject.link.flashconfigenable.1902056808" name="Enable automatic placement of Flash Configuration field in image" superClass="com.crt.advproject.link.flashconfigenable" value="true" valueType="boolean"/>
@@ -518,7 +528,7 @@
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
 								</inputType>
 							</tool>
-							<tool id="com.crt.advproject.tool.debug.release.1260787161" name="MCU Debugger" superClass="com.crt.advproject.tool.debug.release"/>
+							<tool id="com.crt.advproject.tool.debug.release.901469447" name="MCU Debugger" superClass="com.crt.advproject.tool.debug.release"/>
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
